[package]
name = "pallet-democringey"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
# homepage = "https://substrate.dev"
# repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for democracy modified to handle simple majority treasury proposals."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4", default-features = false }
sp-io = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4", default-features = false }
sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4", default-features = false }
frame-benchmarking = { version = "3.1.0", default-features = false, optional = true }
frame-support = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4", default-features = false }
frame-system = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4", default-features = false }

[dev-dependencies]
sp-core = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-balances = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-scheduler = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-storage = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-treasury = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
substrate-test-utils = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
